[metadata]
description = A SAS kernel for Jupyter
# description_file = file: README.md
long_description = file: README.md
author = Jared Dean
license = Apache Software License
license_file = LICENSE.txt
author_email =jared.dean@sas.com
url = https://github.com/sassoftware/sas_kernel

classifiers = 
    Framework :: IPython
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Software Development
    Topic :: System :: Shells

[options]
install_requires =
    saspy >= 3.6
    metakernel >= 0.27.5
    jupyter_client >= 6
    ipython >= 7

setup_requires = 
    metakernel >= 0.27.5
    jupyter_client >= 6
    ipython >= 7

include_package_data = True

[options.extras_require]
jlab_ext = 
    jupyterlab >=3
    jlab_create_sas_file
    # sas_log_viewer_v2
    # sas2nb
    
